deploy/kustomize/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: banking-demo-gateway
  namespace: aks-istio-ingress
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - "onlinebankingdemo.bjdazure.tech"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: banking-demo-tls
  - hosts:
    - "onlinebankingdemo.bjdazure.tech"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
